# MySQL-Manager

./: README.md  pyproject.toml
mysqlm/: __init__.py  __main__.py  backups.py  cli.py  constants.py  instance_manager.py  logging_utils.py  models.py  mysql_repository.py  parameters.py  registry.py  system.py  systemd.py  upgrade.py  utils.py
tests/: test_logging_utils.py  test_registry.py
